<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="4dp"
        card_view:cardElevation="4sp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lyt_is_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="gone">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/img_profile"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_user_account"
                    app:civ_border_color="@color/colorArtBorder" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/img_profile"
                    android:layout_toRightOf="@+id/img_profile">

                    <TextView
                        android:id="@+id/txt_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text=""
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_username"
                        android:layout_marginBottom="6dp"
                        android:text="" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:padding="3dp"
                    android:text="@string/txt_profile_edit"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lyt_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="visible">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/img_profile2"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_user_account_white"
                    app:civ_border_color="@color/colorArtBorder" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/img_profile2"
                    android:layout_toRightOf="@+id/img_profile2">

                    <TextView
                        android:id="@+id/txt_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/txt_profile_welcome"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_not_registered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_welcome"
                        android:layout_marginBottom="6dp"
                        android:text="@string/txt_profile_not_registered" />

                    <TextView
                        android:id="@+id/txt_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_welcome"
                        android:layout_marginBottom="6dp"
                        android:layout_toEndOf="@+id/txt_not_registered"
                        android:layout_toRightOf="@+id/txt_not_registered"
                        android:background="?attr/selectableItemBackground"
                        android:paddingEnd="6dp"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:paddingStart="6dp"
                        android:text="@string/txt_profile_register_now"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="3dp"
                    android:text="@string/txt_profile_login"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="4dp"
        card_view:cardElevation="4sp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="6dp" />

    <Button
        android:id="@+id/txt_logout"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shadow"
        android:elevation="30dp"
        android:minWidth="88dip"
        android:text="@string/logout"
        android:textColor="@color/colorWhite" />


</LinearLayout>